2012-04-12 Jens Thoms Toerring    <jt@toerring.de>

	* lib/xtext.c: Problem when drawing strings with zero or
	negative "height" fixed
	* lib/positioner.c: Fucntion for selecting which mouse
	a positioner reacts to added
	* lib/button.c: Button now reacts only to the release of
	the mouse button that was pressed first on it

2012-03-25 Jens Thoms Toerring    <jt@toerring.de>

	lib/xtext.c: Added fl_get_label_char_at_mouse() function
	and new demo program 'strange_button.c'.
	lib/events.c, lib/handling.c: Added new function
	fl_current_event() that allows callbacks to determine
	the Xforms event they were called for (instead of the
	raw XEvent as it can be obtained with fl_last_event()).

2012-03-24 Jens Thoms Toerring    <jt@toerring.de>

	lib/xtext.c, lib/input.c: Clean-up in string drawing routine
	(and detection of mouse position in a string) - labels are
	now more properly positioned.

2012-03-21 Jens Thoms Toerring    <jt@toerring.de>

	lib/symbols.c: Simplifications (control sequences are now more
	powerful and the order is unimportant) and new function for
	removing symbols.
	lib/vstrcat.c: Removed the file after rewriting the only
	function in lib/errmsg.c that used anything from that file.
	lib/objects.c: Changed signature of fl_get_object_bw()
	to match the documentation (it now returns an int and
	takes only a single argument).
	lib/box.c: Boxes of type FL_NO_BOX and FL_FLAT_BOX now have a
	border width of 0.
	lib/objects.c: attempt to speed up the detection of overlap
	between objects.

2012-03-19 Jens Thoms Toerring    <jt@toerring.de>

	* lib/objects.c, lib/forms.c: Several changes to speed up
	redraw, thanks to Werner Heisch noticing the problem.
	Function for setting form background color added.
	* lib/handling.c: when in a callback e.g. for a browser a
	new window was opened was under the mouse the browser didn't
	receive the correct coordinates on mouse release as
	Werner Heisch noticed.
	* lib/align.c: Cleanup of code for label alignments and